Users and auth API Created (#12)
