# backend/routes/User.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const { fetchUserById, updateUser } = require('../controller/User');
+
+const router = express.Router();
+
+router.get('/:id', fetchUserById).patch('/:id', updateUser);
+
+module.exports =  router;
